--- a/pom.xml
+++ b/pom.xml
@@ -68,16 +68,25 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>3.0.0</version>
 				<configuration>
-				<configLocation>config/checkstyle.xml</configLocation>
-				
+					<configLocation>config/checkstyle.xml</configLocation>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.7</version>
+				<configuration>
+				 <rulesets>
+				  	<ruleset>/rulesets/java/braces.xml</ruleset>
+				  	<ruleset>/rulesets/java/naming.xml</ruleset>
+				 </rulesets>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
 		<plugins>
-			
+
 		</plugins>
 	</reporting>
 </project>
